--- a/Travely.Client/Pages/PlanATrip.xaml
+++ b/Travely.Client/Pages/PlanATrip.xaml
@@ -2,14 +2,26 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
        x:Class="Travely.Client.Pages.PlanATrip"
-       Title="Plan A Trip">
+       >
     <Grid>
-        <StackLayout Margin="20">
-            <!-- <Label Text="Plan a New Trip" FontSize="Large" />-->
-            <Entry Placeholder="Where to?" />
-            <DatePicker AutomationProperties.Name="Start Date" />
-            <DatePicker AutomationProperties.Name="End Date" />
-            <Button Text="Start Planning" />
+        <StackLayout>
+           
+
+            <Image  Margin="50,20,50,30" Source="adventure_logo" WidthRequest="200" HeightRequest="200" />
+            <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="20">
+                <Entry Placeholder="Where to?"  />
+            </Frame>
+
+            <Label Text="Start Date" Margin="20,0,0,0" FontAttributes="Bold" />
+            <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="20">
+                <DatePicker AutomationProperties.Name="Start Date"/>
+            </Frame>
+
+            <Label Text="Start Date" Margin="20,0,0,0" FontAttributes="Bold" />
+            <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="20">
+                <DatePicker AutomationProperties.Name="End Date" />
+            </Frame>
+            <Button  Text="Start Planning" BackgroundColor="Black" HeightRequest="60" WidthRequest="300" Margin="20,60,20,40"/>
         </StackLayout>
     </Grid>
 </ContentPage>
