--- a/Travely.Client/Pages/MyTrips.xaml
+++ b/Travely.Client/Pages/MyTrips.xaml
@@ -4,9 +4,7 @@
              x:Class="Travely.Client.Pages.MyTrips"
              Title="My Trips">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <Button  Text="Start Planning" BackgroundColor="Black" HeightRequest="40" WidthRequest="150" Margin="0,0,20,0"
+             Grid.Row="0" Grid.Column="1" HorizontalOptions="End" VerticalOptions="Start"  Clicked="StartPlanningClicked"/>
     </VerticalStackLayout>
 </ContentPage>
