--- a/Travely.Client/Pages/PlanTrip.xaml
+++ b/Travely.Client/Pages/PlanTrip.xaml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-       x:Class="Travely.Client.Pages.PlanATrip"
+       x:Class="Travely.Client.Pages.PlanTrip"
        >
     <Grid>
 
         <StackLayout>
-
             <Label Text="PLAN A TRIP" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" FontSize="Large" Margin="0,10,0,0" />
             <Image  Margin="50,0,50,0" HorizontalOptions="Center" Source="adventure_logo" WidthRequest="200" HeightRequest="200" />
             <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="15">
