Added small changes

--- a/Travely.Client/AppShell.xaml
+++ b/Travely.Client/AppShell.xaml
@@ -13,26 +13,22 @@
 
     <FlyoutItem Title="Home" FlyoutDisplayOptions="AsMultipleItems" >
         <ShellContent
-        Title="Dashboard"
-        ContentTemplate="{DataTemplate local:DashboardPage}"
-        Route="DashboardPage"
-        Icon="home.svg"/>
+            Title="Dashboard"
+            ContentTemplate="{DataTemplate local:DashboardPage}"
+            Route="DashboardPage"
+            Icon="home.svg"/>
 
         <ShellContent
-        Title="Profile"
-        ContentTemplate="{DataTemplate local:Profile}"
-        Route="Profile"
-        Icon="user.svg"/>
+            Title="Profile"
+            ContentTemplate="{DataTemplate local:Profile}"
+            Route="Profile"
+            Icon="user.svg"/>
 
         <ShellContent
-        Title="My Trips"
-        ContentTemplate="{DataTemplate local:MyTrips}"
-        Route="MyTrips" 
-        Icon="plane.svg"/>
+            Title="My Trips"
+            ContentTemplate="{DataTemplate local:Trips}"
+            Route="MyTrips" 
+            Icon="plane.svg"/>
     </FlyoutItem>
-
     
-
-    
-
 </Shell>
