Added some code refactoring for trips page and verified that the page still works

--- a/Travely.Client/Pages/TripsPage.xaml
+++ b/Travely.Client/Pages/TripsPage.xaml
@@ -6,8 +6,8 @@
 
     <VerticalStackLayout>
         <Button  Text="Start Planning" BackgroundColor="Black" HeightRequest="40" WidthRequest="150" Margin="0,0,20,0"
-             Grid.Row="0" Grid.Column="1" HorizontalOptions="End" VerticalOptions="Start"  Clicked="StartPlanningClicked"/>
-        <CollectionView x:Name="tripsCollection" SelectionMode="Single">
+             Grid.Row="0" Grid.Column="1" HorizontalOptions="End" VerticalOptions="Start"  Clicked="StartPlanning"/>
+        <CollectionView ItemsSource="{Binding Trips}" SelectionMode="Single">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Frame Margin="10">
