--- a/Travely.Client/Pages/PlanTripPage.xaml
+++ b/Travely.Client/Pages/PlanTripPage.xaml
@@ -6,26 +6,30 @@
     <Grid>
         <StackLayout>
             <Label Text="PLAN A TRIP" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" FontSize="Large" Margin="0,10,0,0" />
-            <Image  Margin="50,0,50,0" HorizontalOptions="Center" Source="adventure_logo" WidthRequest="200" HeightRequest="200" />
-            
-            <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="15">
+            <Image  Margin="30,0,30,0" HorizontalOptions="Center" Source="adventure_logo" WidthRequest="150" HeightRequest="200" />
+
+            <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="10">
+                <Entry Text="" Placeholder="Name Your Trip" />
+            </Frame>
+
+            <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="10">
                 <Entry Text="{Binding CountryName}" Placeholder="Where to?" />
             </Frame>
 
             <Label Text="Start Date" Margin="20,0,0,0" FontAttributes="Bold" />
-            <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="15">
+            <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="10">
                 <DatePicker Date="{Binding StartDate}" AutomationProperties.Name="Start Date" />
             </Frame>
 
             <Label Text="Start Date" Margin="20,0,0,0" FontAttributes="Bold" />
-            <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="15">
+            <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="10">
                 <DatePicker Date="{Binding EndDate}" AutomationProperties.Name="End Date" />
             </Frame>
             
             <Button Text="Add trip" 
                     BackgroundColor="Black" 
-                    HeightRequest="60" WidthRequest="300" 
-                    Margin="20,20,20,40"
+                    HeightRequest="40" WidthRequest="300" 
+                    Margin="10,20,20,10"
                     Clicked="AddTrip" />
         </StackLayout>
     </Grid>
