--- a/Travely.Client/Pages/PlanTripPage.xaml
+++ b/Travely.Client/Pages/PlanTripPage.xaml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-       x:Class="Travely.Client.Pages.PlanTripPage"
-       >
+             xmlns:viewModels="clr-namespace:Travely.Client.Models"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="Travely.Client.Pages.PlanTripPage"
+             x:DataType="viewModels:TripViewModel"
+             >
     <Grid>
         <StackLayout>
             <Label Text="PLAN A TRIP" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" FontSize="Large" Margin="0,10,0,0" />
             <Image  Margin="30,0,30,0" HorizontalOptions="Center" Source="adventure_logo" WidthRequest="150" HeightRequest="200" />
 
             <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="10">
-                <Entry Text="" Placeholder="Name Your Trip" />
+                <Entry Text="{Binding TripTitle}" Placeholder="Name Your Trip" />
             </Frame>
 
             <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="10">
@@ -18,12 +20,12 @@
 
             <Label Text="Start Date" Margin="20,0,0,0" FontAttributes="Bold" />
             <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="10">
-                <DatePicker Date="{Binding StartDate}" AutomationProperties.Name="Start Date" />
+                <DatePicker Date="{Binding StartDate}" x:Name="StartDate" />
             </Frame>
 
             <Label Text="Start Date" Margin="20,0,0,0" FontAttributes="Bold" />
             <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="10">
-                <DatePicker Date="{Binding EndDate}" AutomationProperties.Name="End Date" />
+                <DatePicker Date="{Binding EndDate}" x:Name="EndDate" />
             </Frame>
             
             <Button Text="Add trip" 
