--- a/Travely.Client/AppShell.xaml
+++ b/Travely.Client/AppShell.xaml
@@ -30,5 +30,9 @@
             Route="MyTrips" 
             Icon="plane.svg"/>
     </FlyoutItem>
-    
+
+    <ShellContent Title="Edit Trip" Route="EditTripPage" ContentTemplate="{DataTemplate local:EditTripPage}" />
+
+    <MenuItem Text="Edit Trip" Clicked="OpenEditTripPage"/>
+
 </Shell>
