--- a/Travely.Client/Pages/EditTripPage.xaml
+++ b/Travely.Client/Pages/EditTripPage.xaml
@@ -2,22 +2,81 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Travely.Client.Pages.EditTripPage"
-             Title="EditTripPage">
-    <VerticalStackLayout>
-        
-        <Button 
+             Title=""
+             >
+    <ScrollView>
+        <VerticalStackLayout>
+            <Button 
          Clicked="NavigateToPreviousPage"
          VerticalOptions="Start" 
          HorizontalOptions="Start" 
          BackgroundColor="White">
-            <Button.ImageSource>
-                <FileImageSource File="back_button.svg" />
-            </Button.ImageSource>
-        </Button>
-        
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+                <Button.ImageSource>
+                    <FileImageSource File="back_button.svg" />
+                </Button.ImageSource>
+            </Button>
+
+            <Frame Margin="10">
+                <VerticalStackLayout Grid.Column="1" Grid.Row="0" Padding="5" VerticalOptions="Center" HorizontalOptions="Center">
+                    <Label Text="Plan Your Trip" FontSize="20" FontAttributes="Bold"/>
+                </VerticalStackLayout>
+            </Frame>
+
+            <Label Text="Reservations" FontSize="18" FontAttributes="Bold" Margin="20"/>
+            <Frame Margin="10">
+                <HorizontalStackLayout Spacing="65">
+                    <ImageButton Source="bxs_bed.svg" WidthRequest="30" HeightRequest="30"/>
+                    <ImageButton Source="bxs_bus.svg" WidthRequest="30" HeightRequest="30"/>
+                    <ImageButton Source="bxs_car.svg" WidthRequest="30" HeightRequest="30"/>
+                    <ImageButton Source="bxs_plane.svg" WidthRequest="30" HeightRequest="30"/>
+                </HorizontalStackLayout>
+            </Frame>
+
+            <Frame Margin="10">
+                <StackLayout>
+                    <HorizontalStackLayout Spacing="10">
+                        <ImageButton Source="bx_chevron_down.svg" WidthRequest="30" HeightRequest="30"/>
+                        <Label Text="Places to Visit" FontSize="18" FontAttributes="Bold" Margin="20"/>
+                    </HorizontalStackLayout>
+                    <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="5" >
+                        <Grid>
+                            <Image Source="map.png" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
+                            <Entry Placeholder="Add A Place To Visit" Margin="30,0,0,0"/>
+                        </Grid>
+                    </Frame>
+                </StackLayout>
+            </Frame>
+
+            <Frame Margin="10">
+                <StackLayout>
+                    <HorizontalStackLayout Spacing="10">
+                        <ImageButton Source="bx_chevron_down.svg" WidthRequest="30" HeightRequest="30"/>
+                        <Label Text="Notes" FontSize="18" FontAttributes="Bold" Margin="20"/>
+                    </HorizontalStackLayout>
+                    <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="5" >
+                        <Grid>
+                            <Image Source="notes.svg" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
+                            <Entry Placeholder="Add A Note" Margin="30,0,0,0"/>
+                        </Grid>
+                    </Frame>
+                </StackLayout>
+            </Frame>
+
+            <Frame Margin="10">
+                <StackLayout>
+                    <HorizontalStackLayout Spacing="10">
+                        <ImageButton Source="bx_chevron_down.svg" WidthRequest="30" HeightRequest="30"/>
+                        <Label Text="Places To Eat" FontSize="18" FontAttributes="Bold" Margin="20"/>
+                    </HorizontalStackLayout>
+                    <Frame BorderColor="Black" CornerRadius="5" Padding="0" Margin="5" >
+                        <Grid>
+                            <Image Source="eat.svg" VerticalOptions="Center" WidthRequest="20" HorizontalOptions="Start" Margin="10"/>
+                            <Entry Placeholder="Add A Restaurant" Margin="30,0,0,0"/>
+                        </Grid>
+                    </Frame>
+                </StackLayout>
+            </Frame>
+        </VerticalStackLayout>
+    </ScrollView>
+
 </ContentPage>
